--- a/details/details.css
+++ b/details/details.css
@@ -4,8 +4,13 @@
     box-sizing: border-box;
 }
 
-button {
-    background-color: lightblue;
+.classes {
+    display: flex;
+    min-height: 75vh;
+    max-height: 80vh;
+    min-width: 100vw;
+    overflow: scroll;
+    flex-wrap: wrap;
 }
 
 .modal {
@@ -40,4 +45,143 @@ button {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+}
+
+.enter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* button style */
+
+button {
+    border-color: transparent;
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+    color: rgba(3, 169, 244, 0.54);
+    border-radius: 50%;
+    text-align: center;
+    background: #f7f7f7;
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.08);
+}
+
+button .fa {
+    position: absolute;
+    content: '';
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    vertical-align: middle;
+    left: 10px;
+    top: 9px;
+    border-radius: 50%;
+    font-size: 40px;
+    background-image: -webkit-linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+    background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
+    box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
+    border-bottom: solid 2px #b5b5b5;
+}
+
+button .fa:active {
+    background-image: -webkit-linear-gradient(#efefef 0%, #d6d6d6 100%);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
+    border-bottom: solid 2px #d8d8d8;
+}
+
+#modal {
+    position: relative;
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+
+/* Modal Content */
+
+#modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    overflow: hidden;
+}
+
+input,
+select {
+    padding: 10px;
+    margin: 10px;
+    width: 100%;
+}
+
+.goal {
+    display: flex;
+    justify-content: space-evenly;
+    max-height: 6vh;
+    position: absolute;
+    bottom: 0vh;
+    margin: 10px;
+    width: 100%;
+}
+
+.goal input {
+    width: auto;
+}
+
+
+/* card styling */
+
+.column {
+    float: left;
+    width: 25vw;
+    padding: 0 10px;
+}
+
+.row {
+    margin: 0 -5px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100vw;
+        display: block;
+        margin-bottom: 20px;
+    }
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(207, 14, 14, 0.2);
+    padding: 16px;
+    text-align: center;
+    background-color: #f1f1f1;
+    margin: 5px;
+    width: auto;
 }
