--- a/style1.css
+++ b/style1.css
@@ -1,417 +1,493 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-/* for navigation bar */
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 70px;
-    padding: 10px;
-    position: sticky;
-    background-color: white;
-    top: 0;
-    z-index: 100;
-}
-
-.navtoggle {
-    background-color: black;
-}
-
-.menulinks {
-    display: flex;
-    justify-content: space-between;
-    padding-right: 10%;
-    width: 80%;
-    visibility: hidden;
-}
-
-.navtoggle .menulinks {
-    visibility: visible;
-    color: white;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-.menu {
-    width: 50px;
-    height: 50px;
-    top: 10px;
-    left: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.brand {
-    position: absolute;
-    left: 35vw;
-    /* font-family: 'Bungee Shade', cursive;*/
-    font-family: 'Black Ops One', cursive;
-    color: black;
-    font-size: 40px;
-}
-
-.brandon {
-    visibility: hidden;
-}
-
-.burger {
-    position: relative;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    width: 80%;
-    height: 2px;
-    background-color: black;
-    border-radius: 20%;
-}
-
-.burger::before {
-    transform: translateY(-10px);
-    content: "";
-    position: absolute;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    width: 80%;
-    height: 2px;
-    background-color: black;
-    border-radius: 20%;
-}
-
-.burger::after {
-    transform: translateY(10px);
-    content: "";
-    position: absolute;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    width: 80%;
-    height: 2px;
-    background-color: black;
-    border-radius: 20%;
-}
-
-.burgeron .burger {
-    background-color: transparent;
-}
-
-.burgeron .burger::before {
-    animation-delay: 2s;
-    transform: translateY(10px);
-    transform: rotateZ(45deg);
-    background-color: white;
-}
-
-.burgeron .burger::after {
-    animation-delay: 2s;
-    transform: translateY(-10px);
-    transform: rotateZ(-45deg);
-    background-color: white;
-}
-
-
-/* end for navigation bar */
-
-
-/* Style the tab */
-
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-}
-
-
-/* Style the buttons inside the tab */
-
-.tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-    font-size: 17px;
-}
-
-
-/* Change background color of buttons on hover */
-
-.tab button:hover {
-    background-color: #ddd;
-}
-
-
-/* Create an active/current tablink class */
-
-.tab button.active {
-    background-color: #ccc;
-}
-
-.timetable {
-    width: 100%;
-    display: block;
-    text-align: center;
-}
-
-.row1 {
-    display: flex;
-    text-align: center;
-}
-
-#Mon,
-#Tue,
-#Wed,
-#Thu,
-#Fri,
-#Sat,
-#Sun {
-    display: flex;
-    flex-wrap: nowrap;
-}
-
-.time {
-    flex: 1;
-    flex-grow: 1;
-    display: inline-block;
-    width: 10vw;
-    height: 10vh;
-    padding: 10px;
-    background-color: #ffd3b6;
-    border: 1px solid white;
-    margin: 0px;
-    text-align: center;
-    overflow:hidden;
-}
-
-.firstcol {
-    border: 1px solid white;
-    display: inline-block;
-    background-color: #ffd3b6;
-    height: 10vh;
-    padding: 10px 0px;
-    margin: 0px;
-    text-align: center;
-}
-
-.subject,
-.free {
-    position: relative;
-    display: inline-block;
-    height: 10vh;
-    padding: 10px 0px;
-    border: 1px solid white;
-    margin: 0px;
-    text-align: center;
-}
-
-.subject {
-    background-color: rgb(223, 223, 110);
-}
-
-.free {
-    background-color: rgba(221, 94, 94, 0.692);
-}
-
-.inner {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.links {
-    background-color: rgba(61, 199, 134, 0.884);
-    position: absolute;
-    width:100%;
-    bottom:0;
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    /* for navigation bar */
     
-    display: none;
-   
-}
-
-.subject:hover>.links {
-    display: block;
-}
-.subject:hover> .inner{
-   top:30%;
-}
-
-.yes:hover{
-    fill:green;
-}
-.no:hover{
-    fill:red;
-}
-.hday:hover{
-    fill:blue;
-}
-.present{
-    background-color:Green;
-}
-.absent{
-    background-color:red;
-}
-.holiday{
-    background-color:blue;
-}
-
-
-/* Style the tab content */
-
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-}
-
-
-/* for todo  */
-
-
-/* Remove margins and padding from the list */
-
-ul {
-    margin: 0;
-    padding: 0;
-}
-
-
-/* Style the list items */
-
-ul li {
-    cursor: pointer;
-    position: relative;
-    padding: 12px 8px 12px 40px;
-    list-style-type: none;
-    background: #eee;
-    font-size: 18px;
-    transition: 0.2s;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-
-/* Set all odd list items to a different color (zebra-stripes) */
-
-ul li:nth-child(odd) {
-    background: #f9f9f9;
-}
-
-
-/* Darker background-color on hover */
-
-ul li:hover {
-    background: #ddd;
-}
-
-
-/* When clicked on, add a background color and strike out text */
-
-ul li.checked {
-    background: #888;
-    color: #fff;
-    text-decoration: line-through;
-}
-
-
-/* Add a "checked" mark when clicked on */
-
-ul li.checked::before {
-    content: '';
-    position: absolute;
-    border-color: #fff;
-    border-style: solid;
-    border-width: 0 2px 2px 0;
-    top: 10px;
-    left: 16px;
-    transform: rotate(45deg);
-    height: 15px;
-    width: 7px;
-}
-
-
-/* Style the input */
-
-input {
-    margin: 0;
-    border: none;
-    border-radius: 0;
-    width: 75%;
-    padding: 10px;
-    float: left;
-    font-size: 16px;
-}
-
-
-/* Style the close button */
-
-.close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 16px 12px 16px;
-}
-
-.close:hover {
-    background-color: #f44336;
-    color: white;
-}
-
-
-/* Style the header */
-
-.todoheader {
-    background-color: #f44336;
-    padding: 30px 40px;
-    color: white;
-    text-align: center;
-}
-
-
-/* Clear floats after the header */
-
-.todoheader:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-
-/* Style the "Add" button */
-
-.addBtn {
-    padding: 10px;
-    width: 25%;
-    background: #d9d9d9;
-    color: #555;
-    float: left;
-    text-align: center;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 0;
-}
-
-.addBtn:hover {
-    background-color: #bbb;
-}
-
-
-/* end for todo */
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 70px;
+        padding: 10px;
+        position: sticky;
+        background-color: white;
+        top: 0;
+        z-index: 100;
+    }
+    
+    .navtoggle {
+        background-color: black;
+    }
+    
+    .menulinks {
+        display: flex;
+        justify-content: space-between;
+        padding-right: 10%;
+        width: 80%;
+        visibility: hidden;
+    }
+    
+    .navtoggle .menulinks {
+        visibility: visible;
+        color: white;
+    }
+    
+    a {
+        text-decoration: none;
+        color: white;
+    }
+    
+    .menu {
+        width: 50px;
+        height: 50px;
+        top: 10px;
+        left: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
+    
+    .brand {
+        position: absolute;
+        left: 35vw;
+        /* font-family: 'Bungee Shade', cursive;*/
+        font-family: 'Black Ops One', cursive;
+        color: black;
+        font-size: 40px;
+    }
+    
+    .brandon {
+        visibility: hidden;
+    }
+    
+    .burger {
+        position: relative;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        width: 80%;
+        height: 2px;
+        background-color: black;
+        border-radius: 20%;
+    }
+    
+    .burger::before {
+        transform: translateY(-10px);
+        content: "";
+        position: absolute;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        width: 80%;
+        height: 2px;
+        background-color: black;
+        border-radius: 20%;
+    }
+    
+    .burger::after {
+        transform: translateY(10px);
+        content: "";
+        position: absolute;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        width: 80%;
+        height: 2px;
+        background-color: black;
+        border-radius: 20%;
+    }
+    
+    .burgeron .burger {
+        background-color: transparent;
+    }
+    
+    .burgeron .burger::before {
+        animation-delay: 2s;
+        transform: translateY(10px);
+        transform: rotateZ(45deg);
+        background-color: white;
+    }
+    
+    .burgeron .burger::after {
+        animation-delay: 2s;
+        transform: translateY(-10px);
+        transform: rotateZ(-45deg);
+        background-color: white;
+    }
+    /* end for navigation bar */
+    /* Style the tab */
+    
+    .tab {
+        overflow: hidden;
+        border: 1px solid #ccc;
+        background-color: #f1f1f1;
+    }
+    /* Style the buttons inside the tab */
+    
+    .tab button {
+        background-color: inherit;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 14px 16px;
+        transition: 0.3s;
+        font-size: 17px;
+    }
+    /* Change background color of buttons on hover */
+    
+    .tab button:hover {
+        background-color: #ddd;
+    }
+    /* Create an active/current tablink class */
+    
+    .tab button.active {
+        background-color: #ccc;
+    }
+    
+    .timetable {
+        width: 100%;
+        display: block;
+        text-align: center;
+    }
+    
+    .row1 {
+        display: flex;
+        text-align: center;
+    }
+    
+    #Mon,
+    #Tue,
+    #Wed,
+    #Thu,
+    #Fri,
+    #Sat,
+    #Sun {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    
+    .time {
+        flex: 1;
+        flex-grow: 1;
+        display: inline-block;
+        width: 10vw;
+        height: 10vh;
+        padding: 10px;
+        background-color: #ffd3b6;
+        border: 1px solid white;
+        margin: 0px;
+        text-align: center;
+        overflow: hidden;
+    }
+    
+    .firstcol {
+        border: 1px solid white;
+        display: inline-block;
+        background-color: #ffd3b6;
+        height: 10vh;
+        padding: 10px 0px;
+        margin: 0px;
+        text-align: center;
+    }
+    
+    .subject,
+    .free {
+        position: relative;
+        display: inline-block;
+        height: 10vh;
+        padding: 10px 0px;
+        border: 1px solid white;
+        margin: 0px;
+        text-align: center;
+    }
+    
+    .subject {
+        background-color: rgb(223, 223, 110);
+    }
+    
+    .free {
+        background-color: rgba(221, 94, 94, 0.692);
+    }
+    
+    .inner {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .links {
+        background-color: rgba(61, 199, 134, 0.884);
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        display: none;
+    }
+    
+    .subject:hover>.links {
+        display: block;
+    }
+    
+    .subject:hover>.inner {
+        top: 30%;
+    }
+    
+    .yes:hover {
+        fill: green;
+    }
+    
+    .no:hover {
+        fill: red;
+    }
+    
+    .hday:hover {
+        fill: blue;
+    }
+    
+    .present {
+        background-color: Green;
+    }
+    
+    .absent {
+        background-color: red;
+    }
+    
+    .holiday {
+        background-color: blue;
+    }
+    /* Style the tab content */
+    
+    .tabcontent {
+        display: none;
+        padding: 6px 12px;
+        border: 1px solid #ccc;
+        border-top: none;
+    }
+    /* for todo  */
+    /* Remove margins and padding from the list */
+    
+    ul {
+        margin: 0;
+        padding: 0;
+    }
+    /* Style the list items */
+    
+    ul li {
+        cursor: pointer;
+        position: relative;
+        padding: 12px 8px 12px 40px;
+        list-style-type: none;
+        background: #eee;
+        font-size: 18px;
+        transition: 0.2s;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+    /* Set all odd list items to a different color (zebra-stripes) */
+    
+    ul li:nth-child(odd) {
+        background: #f9f9f9;
+    }
+    /* Darker background-color on hover */
+    
+    ul li:hover {
+        background: #ddd;
+    }
+    /* When clicked on, add a background color and strike out text */
+    
+    ul li.checked {
+        background: #888;
+        color: #fff;
+        text-decoration: line-through;
+    }
+    /* Add a "checked" mark when clicked on */
+    
+    ul li.checked::before {
+        content: '';
+        position: absolute;
+        border-color: #fff;
+        border-style: solid;
+        border-width: 0 2px 2px 0;
+        top: 10px;
+        left: 16px;
+        transform: rotate(45deg);
+        height: 15px;
+        width: 7px;
+    }
+    /* Style the input */
+    
+    input {
+        margin: 0;
+        border: none;
+        border-radius: 0;
+        width: 75%;
+        padding: 10px;
+        float: left;
+        font-size: 16px;
+    }
+    /* Style the close button */
+    
+    .close {
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 12px 16px 12px 16px;
+    }
+    
+    .close:hover {
+        background-color: #f44336;
+        color: white;
+    }
+    /* Style the header */
+    
+    .todoheader {
+        background-color: #f44336;
+        padding: 30px 40px;
+        color: white;
+        text-align: center;
+    }
+    /* Clear floats after the header */
+    
+    .todoheader:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+    /* Style the "Add" button */
+    
+    .addBtn {
+        padding: 10px;
+        width: 25%;
+        background: #d9d9d9;
+        color: #555;
+        float: left;
+        text-align: center;
+        font-size: 16px;
+        cursor: pointer;
+        transition: 0.3s;
+        border-radius: 0;
+    }
+    
+    .addBtn:hover {
+        background-color: #bbb;
+    }
+    /* end for todo */
+    
+    .outerbox {
+        width: 100vw;
+        min-height: 80vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #aedaa6;
+        position: relative;
+    }
+    
+    .card {
+        width: 650px;
+        /* // height: 375px; */
+        position: absolute;
+        background: white;
+        margin: 0 auto;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+        transition: all 0.3s;
+    }
+    
+    .card:hover {
+        box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    
+    .graph {
+        padding: 30px;
+        width: 45%;
+        text-align: center;
+        float: left;
+        height: 100%;
+        height: 270px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .graph .chart {
+        padding-top: 10px;
+        position: relative;
+        max-height: 270px;
+    }
+    
+    .graph .chart p {
+        position: absolute;
+        top: 50%;
+        left: 45%;
+    }
+    
+    .description {
+        padding: 30px;
+        float: left;
+        width: 55%;
+        border-left: 2px solid #efefef;
+    }
+    
+    .description h1 {
+        color: #515151;
+        font-weight: 300;
+        padding-top: 15px;
+        margin: 0;
+        font-size: 30px;
+        font-weight: 300;
+    }
+    
+    .description h2 {
+        color: #515151;
+        margin: 0;
+        text-transform: uppercase;
+        font-weight: 500;
+    }
+    
+    .description h4 {
+        margin: 0;
+        color: #727272;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 12px
+    }
+    
+    .description p {
+        font-size: 12px;
+        line-height: 20px;
+        color: #727272;
+        padding: 20px 0;
+        margin: 0;
+    }
+    
+    .description button {
+        outline: 0;
+        border: 0;
+        background: none;
+        border: 1px solid #d9d9d9;
+        padding: 8px 0px;
+        margin-bottom: 30px;
+        color: #515151;
+        text-transform: uppercase;
+        width: 125px;
+        font-family: inherit;
+        margin-right: 5px;
+        transition: all 0.3s ease;
+        font-weight: 500;
+    }
+    
+    .description button:hover {
+        border: 1px solid #aedaa6;
+        color: #aedaa6;
+        cursor: pointer;
+    }
