--- a/login/login1.css
+++ b/login/login1.css
@@ -8,6 +8,16 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+.slideshow-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -10;
+    margin: 0;
+}
+
 .superwrap {
     display: flex;
     justify-content: center;
@@ -162,3 +172,35 @@ input[type=submit] {
 
 
 /* end of media queries */
+
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+    image-rendering: optimizeQuality;
+    z-index: -10;
+}
+
+
+/* Slideshow container */
+
+
+/* Fading animation */
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 2s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
