--- a/login/login1.css
+++ b/login/login1.css
@@ -94,6 +94,10 @@ form {
     width: 90%;
 }
 
+form h3 {
+    margin-bottom: 10px;
+}
+
 input {
     position: relative;
     width: 100%;
@@ -168,6 +172,20 @@ input[type=submit] {
         width: 300px;
         padding: 20px;
     }
+    form {
+        width: 90%;
+    }
+    input {
+        margin: 6px;
+        padding: 8px;
+    }
+    .tab button {
+        padding: 10px 12px;
+    }
+    img {
+        min-height: 100%;
+        object-fit: cover;
+    }
 }
 
 
@@ -175,6 +193,8 @@ input[type=submit] {
 
 .mySlides {
     display: none;
+    width: 100%;
+    height: 100%;
 }
 
 img {
