--- a/details/details.css
+++ b/details/details.css
@@ -6,9 +6,8 @@
 
 .classes {
     display: flex;
-    min-height: 75vh;
-    max-height: 80vh;
-    min-width: 100vw;
+    height: 90vh;
+    width: 100vw;
     overflow: scroll;
     flex-wrap: wrap;
 }
@@ -140,7 +139,7 @@ select {
     display: flex;
     justify-content: space-evenly;
     max-height: 6vh;
-    position: absolute;
+    position: relative;
     bottom: 0vh;
     margin: 10px;
     width: 100%;
@@ -184,4 +183,74 @@ select {
     background-color: #f1f1f1;
     margin: 5px;
     width: auto;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Zilla+Slab&display=swap');
+* {
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
+body {
+    min-height: 200vh;
+}
+
+section {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    pointer-events: none;
+}
+
+.frontpage {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: url('../assets/startingscreen.jpg');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#pg1 {
+    clip-path: polygon(0% 0%, 56% 0%, 42% 8%, 56% 16%, 43% 24%, 55% 33%, 43% 42%, 55% 50%, 41% 59%, 54% 67%, 41% 75%, 55% 84%, 39% 91%, 55% 100%, 0% 100%);
+}
+
+#pg2 {
+    clip-path: polygon(100% 0, 56% 0%, 42% 8%, 56% 16%, 43% 24%, 55% 33%, 43% 42%, 55% 50%, 41% 59%, 54% 67%, 41% 75%, 55% 84%, 39% 91%, 55% 100%, 100% 100%);
+}
+
+.content {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 100px;
+    padding-top: 150px;
+    min-height: 110vh;
+}
+
+.content h1 {
+    font-size: 80px;
+    color: #8DFF40;
+    text-transform: capitalize;
+    font-weight: bold;
+    padding: 15px 0px 0px 0px;
+    font-family: 'Zilla Slab', serif;
+}
+
+.content h4 {
+    font-family: 'Dancing Script', cursive;
+    font-size: 30px;
+    padding-bottom: 15px;
+}
+
+@media only screen and (max-width: 600px) {
+    .content h1 {
+        font-size: 50px;
+    }
 }
