--- a/details/details.css
+++ b/details/details.css
@@ -4,9 +4,13 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #c5c3c6;
+}
+
 .classes {
     display: flex;
-    height: 90vh;
+    height: 88vh;
     width: 100vw;
     overflow: scroll;
     flex-wrap: wrap;
@@ -39,7 +43,7 @@
 /* Modal Content */
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: #c5c3c6;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
@@ -58,37 +62,6 @@
 button {
     border-color: transparent;
     display: inline-block;
-    position: relative;
-    text-decoration: none;
-    color: rgba(3, 169, 244, 0.54);
-    border-radius: 50%;
-    text-align: center;
-    background: #f7f7f7;
-    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.08);
-}
-
-button .fa {
-    position: absolute;
-    content: '';
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    vertical-align: middle;
-    left: 10px;
-    top: 9px;
-    border-radius: 50%;
-    font-size: 40px;
-    background-image: -webkit-linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
-    background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
-    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
-    box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-    border-bottom: solid 2px #b5b5b5;
-}
-
-button .fa:active {
-    background-image: -webkit-linear-gradient(#efefef 0%, #d6d6d6 100%);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-    border-bottom: solid 2px #d8d8d8;
 }
 
 #modal {
@@ -109,30 +82,40 @@ button .fa:active {
     /* Full height */
     overflow: auto;
     /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 
 /* Modal Content */
 
 #modal-content {
+    padding: 1000px;
     position: relative;
-    background-color: #fefefe;
+    background-color: #c5c3c6;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
     overflow: hidden;
+    z-index: 100;
+    padding-bottom: 30px;
+}
+
+#modal-content form input {
+    margin-right: 20px;
 }
 
 input,
 select {
     padding: 10px;
     margin: 10px;
-    width: 100%;
+    width: 98%;
+}
+
+input[type=submit] {
+    margin-top: 15px;
+    background-color: #1985a1;
+    border: 0;
 }
 
 .goal {
@@ -154,7 +137,7 @@ select {
 
 .column {
     float: left;
-    width: 25vw;
+    width: 20vw;
     padding: 0 10px;
 }
 
@@ -174,83 +157,31 @@ select {
         display: block;
         margin-bottom: 20px;
     }
+    .classes #add {
+        padding: 15px;
+        max-width: 60px;
+        max-height: 60px;
+    }
+    .classes #add img {
+        max-width: 60px;
+        max-height: 60px;
+    }
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(207, 14, 14, 0.2);
+    box-shadow: 0 4px 8px 0 #1985a1;
     padding: 16px;
     text-align: center;
     background-color: #f1f1f1;
     margin: 5px;
+    margin-top: 10px;
     width: auto;
+    max-width: 300px;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Zilla+Slab&display=swap');
-* {
-    margin: 0;
-    border: 0;
-    box-sizing: border-box;
-}
-
-body {
-    min-height: 200vh;
-}
-
-section {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 1000;
-    pointer-events: none;
-}
-
-.frontpage {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: url('../assets/startingscreen.jpg');
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-#pg1 {
-    clip-path: polygon(0% 0%, 56% 0%, 42% 8%, 56% 16%, 43% 24%, 55% 33%, 43% 42%, 55% 50%, 41% 59%, 54% 67%, 41% 75%, 55% 84%, 39% 91%, 55% 100%, 0% 100%);
-}
-
-#pg2 {
-    clip-path: polygon(100% 0, 56% 0%, 42% 8%, 56% 16%, 43% 24%, 55% 33%, 43% 42%, 55% 50%, 41% 59%, 54% 67%, 41% 75%, 55% 84%, 39% 91%, 55% 100%, 100% 100%);
-}
-
-.content {
-    background-color: rgb(0, 0, 0);
-    color: white;
-    padding: 100px;
-    padding-top: 150px;
-    min-height: 110vh;
-}
-
-.content h1 {
-    font-size: 80px;
-    color: #8DFF40;
-    text-transform: capitalize;
-    font-weight: bold;
-    padding: 15px 0px 0px 0px;
-    font-family: 'Zilla Slab', serif;
-}
-
-.content h4 {
-    font-family: 'Dancing Script', cursive;
-    font-size: 30px;
-    padding-bottom: 15px;
-}
-
-@media only screen and (max-width: 600px) {
-    .content h1 {
-        font-size: 50px;
-    }
+.classes #add {
+    background-color: inherit;
+    padding: 30px;
+    max-width: 100px;
+    max-height: 100px;
 }
